# HiveForge

./: .gitignore  .gitmodules  HiveForgeSystem.md  PHASE_2_COMPLETE.md  README.md  create_sandbox.js  demo_agents_with_llm.py  demo_marketplace.py  demo_session_replay.py  demo_tool_execution.py  draft_feedback_routes.js  hiveforge_bootstrap.md  hiveforge_server.js  install.js  pinokio.js  pinokio.json  ramclaw_server.js  start.js  update.js
agents/: __init__.py  agent_base.py  coordinator_agent.py  message_bus.py  task_scheduler.py
docs/: credential_broker_v1.md  hiveforge_architecture.md  hiveforge_overview.md  hiveforge_sandbox_architecture.md  milestone_b_credential_and_runtime_checks.md  task8_clawhub_vetting_and_sandboxing.md
hiveforge/: __init__.py  app.py  business_builder.py
openclaw/: README.md  pyproject.toml
openclaw/openclaw/: __init__.py  agent.py  config.py
openclaw/openclaw/provider/: __init__.py  lmstudio.py  openai_compatible.py
openclaw/openclaw/tools/: __init__.py  browser.py  file.py  npm.py  playwright_interact.py
sandbox/: config.example.json
scripts/: import_pixel_assets.ps1  production_certification.js
templates/: README.md  business.json  content_creator.json  game_studio.json  mobile_app.json  music_production.json  publishing_house.json  research_lab.json  schema.json  software_agency.json  software_web_app.json
tests/: business-autonomy-template.test.js  hardening-goals.test.js  operating-staffing.test.js  policy-regression.test.js  production-safety-gate.test.js  publishing-autonomy-template.test.js  recovery-chaos.test.js  (+3 more)
(+95 files in other folders)
